# Jari-2.0.

./: README.md
Arduino/Arduino_inferior_inicial/: Arduino_inferior.ino
Arduino/Coneion_esp32_ArduinoUNO/: Coneion_esp32_ArduinoUNO.ino
Arduino/Pruebas/micro-ros_subscriber/: micro-ros_subscriber.ino
arduino/Arduino_Inferior/: Arduino_Inferior.ino
arduino/Arduino_Superior/: Arduino_Superior.ino
arduino/Arduino_inferior/: Arduino_inferior.ino
arduino/Pruebas/Subscriptor_Publicador/: Subscriptor_Publicador.ino
arduino/Pruebas/micro-ros/: micro-ros.ino
src/arduino/: package.xml  setup.py
src/arduino/arduino/: arduino_node.py
src/arduino/launch/: arduino.launch.py
src/camera/: package.xml  setup.py
src/camera/camera/: camera_node.py
src/camera/launch/: camera.launch.py
src/coordinator/: package.xml  setup.py
src/coordinator/coordinator/: coordinator_node.py
src/coordinator/launch/: coordinator.launch.py
src/flask_ros2_api/: package.xml  setup.cfg  setup.py
src/flask_ros2_api/flask_ros2_api/: flask_ros2_api_node.py  flask_ros2_api_node_ejemplo.py
src/flask_ros2_api/launch/: flask_ros2_api.launch.py
src/micro/: package.xml  setup.cfg  setup.py
src/micro/launch/: micro.launch.py
src/micro/micro/: micro_node.py
src/webServer/: setup.cfg  setup.py
src/webServer/webServer/: webServer_node.py
src/web_server/: package.xml  setup.py
src/web_server/launch/: web_server.launch.py
webserver/: api.py
webserver/templates/: index.html
webserver/webServer/: package.xml
webserver/webServer/launch/: webServer.launch.py
